personal customisations layer added

--- a/index.html
+++ b/index.html
@@ -6,96 +6,243 @@
     <title>Whiskey Drop | Taste a new whiskey every month</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" 
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" 
-        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/1715f3b4af.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css" type="text/css" />
 </head>
 
 <body>
-    <article class="container">
+    <div class="container-fluid navalert-container">
+        <div class="container-fluid alert-container">
+            <div class="row d-none d-sm-block">
+                <div class="col-12">
+                    <div class="site-wide-alert alert alert-warning">
+                        <strong>Sales Now On!</strong> We've got a sale on. Get a 12-month subscription for the price of 6! <a href="">See here for details!</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <nav class="navbar navbar-dark navbar-expand-sm">
+            <a href="/" class="navbar-brand">Whiskey Drop</a>
+
+            <button class="navbar-toggler ml-auto" type="button" 
+                    data-toggle="collapse" data-target="#navbarNavDropdown" 
+                    aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav mr-auto">
+                    <li class="active nav-item mr-2"><a class="nav-link" href="/">Home</a></li>
+                    <li class="nav-item mr-2"><a class="nav-link" href="/about">About</a></li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink"
+                            role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Whiskeys
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <a class="dropdown-item" href="#">Irish</a>
+                            <a class="dropdown-item" href="#">Scotch</a>
+                            <a class="dropdown-item" href="#">Japanese</a>
+                            <a class="dropdown-item" href="#">American</a>
+                        </div>
+                    </li>
+                    <li class="nav-item mr-2 d-block d-sm-none"><a class="nav-link" href="/login">Sign In / Sign Up</a></li>
+                </ul>
+            </div>
+            <div class="d-none d-md-block">
+                <p class="=navbar-text my-auto mr-2"><em>Great whiskey delivered to your door!</em></p>
+                <a href="/login" class="btn btn--cta btn--red">Sign In / Sign Up</a>
+            </div>
+        </nav>
+    </div> 
+    
+    <div class="container-fluid callout-container">
         <!-- Callout -->
-        <section class="callout">
-            <h1>The finest whiskeys delivered to your doorstep.</h1>
-            <p class="lead">Sign up today to start receiving the world's best whiskeys every month. 
-            <s>€19.99</s> <strong><mark>First one is free!</mark></strong></p>
-            <button class="btn btn-success btn-lg">Sign Up!</button>
-            <p class="text-muted"><small>You must be over 18 to sign up to our service. Please, drink responsibly.</small></p>
-        </section>
+        <div class="opaque-overlay">&nbsp;</div>
+        <div class="row">
+            <div class="col-12">
+                <section class="callout jumbotron text-center">
+                    <h1 class="jumbotron-header">The finest whiskeys delivered to your doorstep.</h1>
+                    <hr class="block-divider block-divider--orange">
+                    <p class="lead">Sign up today to start receiving the world's best whiskeys every month. 
+                        <s class="d-none d-sm-inline">€19.99</s>
+                        <span class="d-inline d-sm-none"><br></span>
+                        <strong><mark>First one is free!</mark></strong></p>
+                    <button class="btn btn-lg btn--cta btn--red" data-toggle="modal" data-target="#signUpModal">Sign Up!</button>
+                    <p class="text-muted"><small>You must be over 18 to sign up to our service. Please, drink responsibly.</small></p>
+                </section>
+            </div>
+        </div>
         <!-- /.callout -->
-        <hr>
+    </div>
 
-        <!-- Quotes -->
-        <section class="quotes">
-            <h2 class="text-uppercase">Quotes:</h2>
-            <blockquote class="quote">
-                <p>I've been introduced to more than 10 great international whiskeys I never knew about.</p>
-                <p>- Jane Doe</p>
-            </blockquote>
-            <blockquote class="quote">
-                <p>I haven't been sober for months!</p>
-                <p>- Jane Doe</p>
-            </blockquote>
-        </section>
-        <!-- /.quotes -->
-        <hr>
+    <!-- Quotes -->
+    <div class="container-wrapper">
+        <div class="container quotes-container content-container">
+            <section class="quotes">
+                <div class="row">
+                    <div class="col-12 page-header">
+                        <h2 class="text-uppercase">Quotes:</h2>
+                        <hr class="block-divider block-divider--short">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 col-md-6">
+                        <div class="media">
+                            <div class="d-none d-sm-block">
+                                <img src="img/girl-image.png" class="rounded-circle mr-3" height="100px" width="100px">
+                            </div>
+                            <div class="media-body">
+                                <blockquote class="quote">
+                                    <p>I've been introduced to more than 10 great international whiskeys I never knew about.</p>
+                                    <p>- Jane Doe</p>
+                                </blockquote>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <div class="media">
+                            <div class="d-none d-sm-block">
+                                <img src="img/guy-image.png" class="rounded-circle mr-3" height="100px" width="100px">
+                            </div>
+                            <div class="media-body">
+                                <blockquote class="quote">
+                                    <p>I haven't been sober for months!</p>
+                                    <p>- Jack Doe</p>
+                                </blockquote>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </div>
+    </div>
+    <!-- /.quotes -->
 
-        <!-- Features -->
-        <section class="features">
-            <h2 class="text-uppercase">Features:</h2>
-            <div class="feature">
-                <h3>food.list.co.uk Article 118592</h3>
-                <p>Johnnie Walker unveils limited edition collection to celebrate 200 years</p>
-                <p><a class="btn btn-sm btn-light" href="https://food.list.co.uk/article/118592-johnnie-walker-unveils-limited-edition-collection-to-celebrate-200-years/">Read More</a></p>
-            </div>
-            <div class="feature">
-                <h3>food.list.co.uk Article 115450</h3>
-                <p>Raising a glass with Johnnie Walker</p>
-                <p><a class="btn btn-sm btn-light" href="https://food.list.co.uk/article/115450-raising-a-glass-with-johnnie-walker/">Read More</a></p>
-            </div>
-            <div class="feature">
-                <h3>food.list.co.uk Article 115280</h3>
-                <p>A dram fine celebration: Easy-to-make highballs to mark 200 years of Johnnie Walker</p>
-                <p><a class="btn btn-sm btn-light" href="https://food.list.co.uk/article/115280-a-dram-fine-celebration-easy-to-make-highballs-to-mark-200-years-of-johnnie-walker/">Read More</a></p>
-            </div>
-        </section>
-        <!-- /.features -->
-        <hr>
+    <!-- Features -->
+    <div class="container-wrapper container-wrapper--red">
+        <div class="container features-container content-container">
+            <section class="features">
+                <div class="row">
+                    <div class="col-12 page-header">
+                        <h2 class="text-uppercase">Features:</h2>
+                        <hr class="block-divider block-divider--short block-divider--white">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col12 col-md-6 col-lg-4">
+                        <div class="feature">
+                            <h3><span class="fas fa-gift d-none d-sm-block"></span> food.list.co.uk Article 118592 <span class="badge badge-success">NEW!</span></h3>
+                            <p>Johnnie Walker unveils limited edition collection to celebrate 200 years</p>
+                            <p><a class="btn btn-sm btn-light" href="https://food.list.co.uk/article/118592-johnnie-walker-unveils-limited-edition-collection-to-celebrate-200-years/">Read More</a></p>
+                        </div>
+                    </div>
+                    <div class="col12 col-md-6 col-lg-4">
+                        <div class="feature">
+                            <h3><span class="fas fa-credit-card d-none d-sm-block"></span> food.list.co.uk Article 115450</h3>
+                            <p>Raising a glass with Johnnie Walker</p>
+                            <p><a class="btn btn-sm btn-light" href="https://food.list.co.uk/article/115450-raising-a-glass-with-johnnie-walker/">Read More</a></p>
+                        </div>
+                    </div>
+                    <div class="col12 d-md-none d-lg-block col-lg-4">
+                        <div class="feature">
+                            <h3><span class="fas fa-times-circle d-none d-sm-block"></span> food.list.co.uk Article 115280</h3>
+                            <p>A dram fine celebration: Easy-to-make highballs to mark 200 years of Johnnie Walker</p>
+                            <p><a class="btn btn-sm btn-light" href="https://food.list.co.uk/article/115280-a-dram-fine-celebration-easy-to-make-highballs-to-mark-200-years-of-johnnie-walker/">Read More</a></p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </div>
+    </div>
+    <!-- /.features -->
 
-        <!-- Monthly favourites -->
-        <section>
-            <h2 class="text-uppercase">Top 5 whiskeys of the month:</h2>
-            <table class="table table-bordered">
-            <thead class="thead-light">
-                <tr>
-                    <th>Name</th>
-                    <th>Origin</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Johnnie Walker</td>
-                    <td>Scotland</td>
-                </tr>
-                <tr>
-                    <td>Oban</td>
-                    <td>Scotland</td>
-                </tr>
-                <tr>
-                    <td>Old Grouse</td>
-                    <td>Scotland</td>
-                </tr>
-                <tr>
-                    <td>Jack Daniels</td>
-                    <td>USA</td>
-                </tr>
-                <tr>
-                    <td>Jamesons</td>
-                    <td>Ireland</td>
-                </tr>
-            </tbody>
-            </table>
-        </section>
-        <!-- /.features -->
-    </article>
+    <!-- Monthly favourites -->
+    <div class="container-wrapper">
+        <div class="container favourites-container content-container"> 
+            <section>
+                <div class="row">
+                    <div class="col-12 page-header">
+                        <h2 class="text-uppercase">Top 5 whiskeys of the month:</h2>
+                        <hr class="block-divider block-divider--short">
+                    </div>
+                </div>
+                <div class="table-responsive">
+                    <table class="table table-bordered col-12">
+                        <thead class="thead-light">
+                            <tr class="my-5">
+                                <th>Name</th>
+                                <th>Origin</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Johnnie Walker</td>
+                                <td>Scotland&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+                            </tr>
+                            <tr>
+                                <td>Oban</td>
+                                <td>Scotland</td>
+                            </tr>
+                            <tr>
+                                <td>Old Grouse</td>
+                                <td>Scotland</td>
+                            </tr>
+                            <tr>
+                                <td>Jack Daniels</td>
+                                <td>USA</td>
+                            </tr>
+                            <tr>
+                                <td>Jamesons</td>
+                                <td>Ireland</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </section>
+        </div>
+    </div>
+    <!-- /.monthly favourites -->
+
+    <div class="modal" tabindex="-1" id="signUpModal">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Sign Up To Whiskey Drop!</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                    <div class="form-group">
+                        <label for="exampleInputEmail1">Email address</label>
+                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                    </div>
+                    <div class="form-group">
+                        <label for="password">Password</label>
+                        <input type="password" class="form-control" id="password" placeholder="Password">
+                    </div>
+                    <div class="form-group">
+                        <label for="repeatPassword">Repeat Password</label>
+                        <input type="password" class="form-control" id="repeatPassword" placeholder="Repeat Password">
+                    </div>
+                    <button type="submit" class="btn btn-success">Submit</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" 
+            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" 
+            integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" 
+            integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 </body>
 
 </html>
